kubernetes/deployment-quiz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quiz
  template:
    metadata:
      labels:
        app: quiz
    spec:
      containers:
      - name: quiz
        image: ramadhanialqadri12/quiz-app.quiz:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: quiz
spec:
  selector:
    app: quiz
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
