kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80
      - path: /grading
        pathType: Prefix
        backend:
          service:
            name: grading
            port:
              number: 80
      - path: /quiz
        pathType: Prefix
        backend:
          service:
            name: quiz
            port:
              number: 80
